k8s/fastapi-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    spec:
      containers:
        - name: fastapi-server
          image: ghcr.io/whyredfire/ls-fastapi-server:f2c2515adfa41210ab9b169193702df79adbc0b9
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: model-cache
              mountPath: /home/nonroot/.cache/huggingface
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "3"
              memory: 4Gi
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: fastapi-model-cache
