k8s/fastapi-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
